--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-logs/
-
-# Build & Node Modules
-.grunt
+# Exclude Build
 build/
 dist/
+# Exclude Node Modules
 node_modules/
-.npm
+# Exclude IDE Folders
 .idea/
 .vscode/
